--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~>2.4.6",
     "jade": "~>0.12.4",
     "mongoose": "~>1.5.0",
-    "socket.io": "~>0.7.11"
+    "socket.io": "~>0.8.2",
+    "underscore": "~>1.1.7"
     }
 }
